2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsurimapper.[ch]:
	Make this class dynamic
	
        * client/Makefile.am:
        * client/gdaemonvfs.c:
        * client/smburi.c:
	Build smb uri mapper into module
	(this avoids extra .so files)

2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.[ch]:
        (g_mount_spec_new_from_data):
        (g_mount_spec_set_with_len):
	Add new functions
	
        * client/Makefile.am:
        * common/Makefile.am:
	Update for moved files
	Build non-shared version of common libs.
	Ups non-shared common libs in client module.

        * common/gvfsuriutils.[ch]: Removed.
        * client/gvfsuriutils.[ch]: Added.
	Moved uriutils to gvfs (not used by daemon)
	Re-namespace to g_vfs_*
	
        * common/gvfsurimapper.[ch]: Removed.
        * client/gvfsurimapper.[ch]: Added.
	Move UriMapper to client lib
	Remove/Hide use of GMountSpec
	
        * client/gdaemonvfs.c:
        * client/smburi.c:
	Update to the new APIs
	
        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsjobqueryfsinfo.c:
	Fix warnings

2007-11-08  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
        * daemon/gvfsjobmove.c:
        * test/benchmark-common.c:
	Fixes for solaris build.
	Patches from Damien Carbery

2007-11-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* daemon/gvfsbackendsftp.c:
	Update g_memory_output_stream_set_free_on_close() to
	g_memory_output_stream_set_free_data().

2007-11-07  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
	Update to new gvfs construction API

2007-11-07  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
        * daemon/gvfsbackendtest.c:
        * daemon/gvfsbackendtrash.c:
	Ansi C fixes from Jens Granseuer

2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* daemon/gvfsdaemonutils.c: (dbus_connection_send_fd):