@@ -22,6 +22,7 @@
 
 #include <config.h>
 
+#include <string.h>
 #include <unistd.h>
 #include <errno.h>
 #include <sys/types.h>
